fix scrollbar and scrolling with page

--- a/src/scss/Modal.scss
+++ b/src/scss/Modal.scss
@@ -51,7 +51,6 @@
 
           .modalBody{
             -ms-overflow-style : none;
-            overflow-y         : scroll;
             font-size          : 14px;
             line-height        : 22px;
             padding            : 0px 40px 0px 40px;
